[package]
name = "beyond_client"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.8"
ghost = "0.1.17"
glium = "0.34.0"
hecs = "0.10.4"
image = "0.24.8"
nalgebra = "0.32.3"
rustc-hash = "1.1.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "sync", "rt", "rt-multi-thread"] }
winit = "0.29.10"
