[package]
name = "beyond_tap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beyond_tap"
path = "src/main.rs"

[lib]
name = "beyond_tap"
path = "lib/lib.rs"

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
anyhow = "1.0.71"
glob = "0.3.1"
texture_packer = "0.25.0"
image = "0.24.6"